ajuste responsive para mobiles

--- a/y1g1g2s3235711131719102020/estilomain.css
+++ b/y1g1g2s3235711131719102020/estilomain.css
@@ -255,6 +255,9 @@
       }
     @media print, screen and (max-width: 720px)
     {
+        @viewport {
+            orientation: landscape;
+        }
         header{
             height:60px !important;
             background-color:#242f62;
