ajuste responsive para mobiles

--- a/y1g1g2s3235711131719102020/estilomain.css
+++ b/y1g1g2s3235711131719102020/estilomain.css
@@ -255,8 +255,8 @@
       }
     @media print, screen and (max-width: 720px)
     {
-        @viewport {
-            orientation: landscape;
+        body{
+            transform: rotate(-90deg);
         }
         header{
             height:60px !important;
